@@ -228,10 +228,10 @@ vips_angle_get_type( void )
 
 	if( etype == 0 ) {
 		static const GEnumValue values[] = {
-			{VIPS_ANGLE_0, "VIPS_ANGLE_0", "0"},
-			{VIPS_ANGLE_90, "VIPS_ANGLE_90", "90"},
-			{VIPS_ANGLE_180, "VIPS_ANGLE_180", "180"},
-			{VIPS_ANGLE_270, "VIPS_ANGLE_270", "270"},
+			{VIPS_ANGLE_D0, "VIPS_ANGLE_D0", "d0"},
+			{VIPS_ANGLE_D90, "VIPS_ANGLE_D90", "d90"},
+			{VIPS_ANGLE_D180, "VIPS_ANGLE_D180", "d180"},
+			{VIPS_ANGLE_D270, "VIPS_ANGLE_D270", "d270"},
 			{VIPS_ANGLE_LAST, "VIPS_ANGLE_LAST", "last"},
 			{0, NULL, NULL}
 		};
@@ -248,14 +248,14 @@ vips_angle45_get_type( void )
 
 	if( etype == 0 ) {
 		static const GEnumValue values[] = {
-			{VIPS_ANGLE45_0, "VIPS_ANGLE45_0", "0"},
-			{VIPS_ANGLE45_45, "VIPS_ANGLE45_45", "45"},
-			{VIPS_ANGLE45_90, "VIPS_ANGLE45_90", "90"},
-			{VIPS_ANGLE45_135, "VIPS_ANGLE45_135", "135"},
-			{VIPS_ANGLE45_180, "VIPS_ANGLE45_180", "180"},
-			{VIPS_ANGLE45_225, "VIPS_ANGLE45_225", "225"},
-			{VIPS_ANGLE45_270, "VIPS_ANGLE45_270", "270"},
-			{VIPS_ANGLE45_315, "VIPS_ANGLE45_315", "315"},
+			{VIPS_ANGLE45_D0, "VIPS_ANGLE45_D0", "d0"},
+			{VIPS_ANGLE45_D45, "VIPS_ANGLE45_D45", "d45"},
+			{VIPS_ANGLE45_D90, "VIPS_ANGLE45_D90", "d90"},
+			{VIPS_ANGLE45_D135, "VIPS_ANGLE45_D135", "d135"},
+			{VIPS_ANGLE45_D180, "VIPS_ANGLE45_D180", "d180"},
+			{VIPS_ANGLE45_D225, "VIPS_ANGLE45_D225", "d225"},
+			{VIPS_ANGLE45_D270, "VIPS_ANGLE45_D270", "d270"},
+			{VIPS_ANGLE45_D315, "VIPS_ANGLE45_D315", "d315"},
 			{VIPS_ANGLE45_LAST, "VIPS_ANGLE45_LAST", "last"},
 			{0, NULL, NULL}
 		};
